<resources>
    <string name="app_name">Calculater</string>
    <string name="Num1_0">0</string>
    <string name="btn_ac">AC</string>
    <string name="btn_plus_minus">+/-</string>
    <string name="btn_prosent">%</string>
    <string name="btn_divide">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multiply">x</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_zero0">0</string>
    <string name="btn_point">.</string>
    <string name="btn_ravno">=</string>
    <string name="btn_6">6</string>
</resources>